Fixed meta tag in index
Signed-off-by: nmyers322 <nmyers322@gmail.com>

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
         <link rel="icon" href="favicon.ico" type="image/x-icon">
         <meta property="og:image" content="http://unkk44e6b48e.nmyers322.koding.io/img/facebook_share.gif"/>
-        <meta property="og:description" content="Check your local water supply for contaminants!"
+        <meta property="og:description" content="Check your local water supply for contaminants!">
         <!--[if lt IE 9]>
             <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.2/html5shiv.js"></script>
         <![endif]-->
