--- a/index.html
+++ b/index.html
@@ -72,8 +72,9 @@
             background-color: #d9d9d9;
         }
         </style>
-        <!-- Google map geocode reverse lookup -->
-        <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+        <!-- google map api -->
+        <script src="http://maps.googleapis.com/maps/api/js"></script>
+       
     </head>
     <body data-ng-controller="BodyController">
         <div id="wrap">
@@ -116,10 +117,13 @@
 
             <div class="container">
 
+                <div id="googleMap" style="width:350px;height:200px;margin-left:auto;margin-right:auto;margin-top:30px;"></div>
                 
             </div>
 
         </div>
+
+
         <div id="footer">
             <div class="container">
                 <div class="row">
